--- a/Clips.html
+++ b/Clips.html
@@ -22,7 +22,7 @@
                 <!-- Navegación -->
                 <nav class="navbar">
                     <ul>
-                        <li><a href="CTRNF - Blog.html">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="Mejores Tiempos.html">Mejores Tiempos</a></li>
                         <li><a href="Jugadores.html">Jugadores</a></li>
                         <li><a href="Novedades.html">Novedades</a></li>
@@ -286,7 +286,7 @@
             <div class="footer-links">
                 <h4>Enlaces Rápidos</h4>
                 <ul>
-                    <li><a href="CTRNF - Blog.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Mejores Tiempos.html">Tiempos</a></li>
                     <li><a href="Jugadores.html">Jugadores</a></li>
                     <li><a href="Novedades.html">Novedades</a></li>
