--- a/Jugadores.html
+++ b/Jugadores.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="CTRNF - Blog.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="Mejores Tiempos.html">Mejores Tiempos</a></li>
                 <li><a href="Clips.html">Clips</a></li>
                 <li><a href="Novedades.html">Novedades</a></li>
