--- a/Mejores Tiempos.html
+++ b/Mejores Tiempos.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="CTRNF - Blog.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="Clips.html">Clips</a></li>
                 <li><a href="Jugadores.html">Jugadores</a></li>
                 <li><a href="Novedades.html">Novedades</a></li>
