--- a/Novedades.html
+++ b/Novedades.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="CTRNF - Blog.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="#torneo">Próximo Torneo</a></li>
                 <li><a href="#noticias">Otras Noticias</a></li>
             </ul>
