--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </label>
       <nav class="navbar">
         <ul>
-          <li><a href="CTRNF - Blog.html">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="Mejores Tiempos.html">Mejores Tiempos</a></li>
           <li><a href="Clips.html">Clips</a></li>
           <li><a href="Jugadores.html">Jugadores</a></li>
@@ -75,7 +75,7 @@
       <div class="link">
         <h3>Categorías</h3>
         <ul>
-          <li><a href="CTRNF - Blog.html">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="Mejores Tiempos.html">Mejores Tiempos</a></li>
           <li><a href="Clips.html">Clips</a></li>
           <li><a href="Jugadores.html">Jugadores</a></li>
